Update landing page to use 'standard_page' and enhance HTML structure and styling

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -1,4 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" rel="preload" as="font" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:300,400,500" rel="stylesheet" rel="preload" as="font" crossorigin="anonymous">
 
 <div class="structure">
   <div class="app-bar" anvil-drop-container=".anvil-container" anvil-drop-redirect=".placeholder">
@@ -21,9 +21,9 @@
       <div class="prompt">To add a sidebar, drop a ColumnPanel here.</div>
     </div>
     
-    <div class="content">
+    <div class="content landing-content">
       <!-- Landing Page Content -->
-      <div class="header">
+      <div class="header landing-header">
         <h1>Willow River Automation Services</h1>
         <h2>Streamlining Workflows, Automating Success.</h2>
       </div>
