Refactor landing page structure by moving HTML content from Home component to standard-page.html and adding dedicated CSS for landing styles.

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -1,4 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:300,400,500" rel="stylesheet" rel="preload" as="font" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:300,400,500" rel="stylesheet">
 
 <div class="structure">
   <div class="app-bar" anvil-drop-container=".anvil-container" anvil-drop-redirect=".placeholder">
@@ -21,8 +21,17 @@
       <div class="prompt">To add a sidebar, drop a ColumnPanel here.</div>
     </div>
     
-    <div class="content landing-content">
-      <div anvil-slot="content-panel"></div>
+    <div class="content">
+      <!-- Landing Page Content -->
+      <div class="landing-content">
+        <div class="header landing-header">
+          <h1>Willow River Automation Services</h1>
+          <h2>Streamlining Workflows, Automating Success.</h2>
+        </div>
+        <!-- ...rest of your landing page content... -->
+      </div>
+      <!-- End Landing Page Content -->
+      
       <div anvil-slot-repeat="default" class="anvil-measure-this"></div>
       <div class="placeholder drop-here" anvil-if-slot-empty="default" anvil-drop-slot="default">Drop a ColumnPanel here.</div>
     </div>
