Enhance landing page design with new CSS styles and structured HTML content for improved user experience

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -22,15 +22,62 @@
     </div>
     
     <div class="content">
-      <!-- Landing Page Content -->
       <div class="landing-content">
-        <div class="header landing-header">
-          <h1>Willow River Automation Services</h1>
-          <h2>Streamlining Workflows, Automating Success.</h2>
-        </div>
-        <!-- ...rest of your landing page content... -->
+        <section class="hero-section">
+          <div class="hero-content">
+            <h1>Willow River Automation Services</h1>
+            <p>Transforming businesses through intelligent automation solutions</p>
+            <a href="#contact" class="cta-button">Get Started</a>
+          </div>
+        </section>
+
+        <section class="services-section">
+          <h2 class="section-title">Our Services</h2>
+          <div class="services-grid">
+            <div class="service-card">
+              <h3>Process Automation</h3>
+              <p>Streamline your workflows and eliminate repetitive tasks</p>
+            </div>
+            <div class="service-card">
+              <h3>Data Integration</h3>
+              <p>Connect your systems for seamless data flow</p>
+            </div>
+            <div class="service-card">
+              <h3>Custom Solutions</h3>
+              <p>Tailored automation solutions for your unique needs</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="stats-section">
+          <div class="stats-grid">
+            <div class="stat-item">
+              <h2>500+</h2>
+              <p>Projects Completed</p>
+            </div>
+            <div class="stat-item">
+              <h2>98%</h2>
+              <p>Client Satisfaction</p>
+            </div>
+            <div class="stat-item">
+              <h2>50k+</h2>
+              <p>Hours Saved</p>
+            </div>
+          </div>
+        </section>
+
+        <section id="contact" class="contact-section">
+          <div class="contact-container">
+            <h2 class="section-title">Ready to Automate?</h2>
+            <p>Let's discuss how we can help transform your business</p>
+            <a href="#contact" class="cta-button">Contact Us</a>
+          </div>
+        </section>
+
+        <footer class="footer">
+          <p>&copy; 2024 Willow River Automation Services. All rights reserved.</p>
+        </footer>
       </div>
-      <!-- End Landing Page Content -->
       
       <div anvil-slot-repeat="default" class="anvil-measure-this"></div>
       <div class="placeholder drop-here" anvil-if-slot-empty="default" anvil-drop-slot="default">Drop a ColumnPanel here.</div>
